@@ -1,4 +1,5 @@
 0.0.7
+Standardised options.
 More docs.
 Tided up class inits.
 Display results of colour chooser from desktopfile.
